syntax = "proto3";
package training;
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";

service FPTBooking {
    rpc CreateBooking(Booking) returns (Booking);
    rpc FindBooking(FindBookingRequest) returns (Booking);
    rpc CancelBooking(CancelBookingRequest) returns (Booking);
    rpc ListBooking(Booking) returns (Booking);
}

message Booking {
    string id = 1;
    int64 customer_id = 2;
    int64 flight_id = 3;
    string code = 4;
    string status = 5;
    google.protobuf.Timestamp booked_date = 6;
}

message FindBookingRequest {
    string id = 1;
}

message CancelBookingRequest {
    string id = 1;
}

message ListBookingRequest {
    int64 customer_id = 1;
}

